tests/ui/raw-ref-op/never-place-isnt-diverging.stderr
error[E0308]: mismatched types
  --> $DIR/never-place-isnt-diverging.rs:4:5
   |
LL |   fn make_up_a_value<T>() -> T {
   |                      - expected this type parameter
LL | /     unsafe {
LL | |
LL | |         let x: *const ! = 0 as _;
LL | |         &raw const *x;
LL | |         // Since `*x` is `!`, HIR typeck used to think that it diverges
LL | |         // and allowed the block to coerce to any value, leading to UB.
LL | |     }
   | |_____^ expected type parameter `T`, found `()`
   |
   = note: expected type parameter `T`
                   found unit type `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
